--- a/package.json
+++ b/package.json
@@ -5,14 +5,35 @@
   "scripts": {
     "lint": "prettier --list-different **/*.sol",
     "lint:check": "prettier --check **/*.sol",
-    "lint:fix": "prettier --write **/*.sol"
+    "lint:fix": "prettier --write **/*.sol",
+    "postinstall": "typechain --target=ethers-v5 build/contracts/*.json",
+    "test": "jest",
+    "watch": "babel --watch src ---out-dir lib --extensions '.ts,.tsx'",
+    "build": "babel src --out-dir lib --extensions '.ts,.tsx'",
+    "tsc": "tsc"
   },
   "dependencies": {
+    "@types/react": "^17.0.37",
+    "dotenv": "^10.0.0",
+    "ethers": "^5.5.2",
     "prettier": "^2.2.1",
     "prettier-plugin-solidity": "^1.0.0-beta.10",
-    "solhint-plugin-prettier": "0.0.5"
+    "react": "^17.0.2",
+    "solhint-plugin-prettier": "0.0.5",
+    "typescript": "^4.5.2"
   },
   "devDependencies": {
-    "hardhat": "^2.7.0"
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-typescript": "^7.16.0",
+    "@typechain/ethers-v5": "^8.0.5",
+    "@typechain/hardhat": "^3.0.0",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.11.11",
+    "hardhat": "^2.7.0",
+    "jest": "^27.4.3",
+    "ts-node": "^10.4.0",
+    "typechain": "^6.0.5"
   }
 }
